--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "4.0.0",
