--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
+    "fancylog": "^3.1.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "^7.0.0",
