--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-lint": "^1.3.4",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-svgmin": "^1.2.4",
