--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Gulp setup for the task runner",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "dev": "gulp",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
