--- a/package.json
+++ b/package.json
@@ -15,27 +15,23 @@
   "author": "Ben Brehaut",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.18.12",
-    "fancylog": "^3.1.1",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "4.0.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "browser-sync": "^2.26.7",
+    "fancylog": "^4.0.3",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "6.1.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-lint": "^1.3.4",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-load-plugins": "^1.6.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-svgmin": "^1.2.4",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-svgmin": "^2.2.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "require-dir": "^1.2.0",
     "webpack-stream": "^5.2.1"
   },
@@ -52,5 +48,14 @@
     "samsung >= 4",
     "opera >= 40",
     "operamobile >= 10"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0"
+  }
 }
