--- a/package.json
+++ b/package.json
@@ -15,24 +15,6 @@
   "author": "Ben Brehaut",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.26.7",
-    "fancylog": "^4.0.3",
-    "gulp-autoprefixer": "6.1.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^6.0.0",
-    "gulp-load-plugins": "^1.6.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-sass-lint": "^1.4.0",
-    "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-svgstore": "^7.0.1",
-    "gulp-uglify": "^3.0.2",
-    "require-dir": "^1.2.0",
-    "webpack-stream": "^5.2.1"
   },
   "browserslist": [
     "IE >= 8",
@@ -56,6 +38,24 @@
     "@babel/register": "^7.4.4",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "browser-sync": "^2.26.7",
+    "fancylog": "^4.0.3",
+    "gulp-autoprefixer": "6.1.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-load-plugins": "^1.6.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
+    "gulp-size": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-svgmin": "^2.2.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
+    "require-dir": "^1.2.0",
+    "webpack-stream": "^5.2.1"
   }
 }
