--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ben Brehaut",
   "license": "ISC",
   "dependencies": {
+    
   },
   "browserslist": [
     "IE >= 8",
@@ -36,11 +37,12 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "gulp": "^4.0.2",
     "browser-sync": "^2.26.7",
     "fancylog": "^4.0.3",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
@@ -48,6 +50,7 @@
     "gulp-imagemin": "^6.0.0",
     "gulp-load-plugins": "^1.6.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-size": "^3.0.0",
