--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "gulp-setup",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Gulp setup for the task runner",
   "main": "index.html",
   "scripts": {
-    "build": "gulp build",
-    "dev": "gulp",
-    "watch": "gulp watch"
+    "develop": "gulp watch --continue",
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -15,22 +14,8 @@
   "author": "Ben Brehaut",
   "license": "ISC",
   "dependencies": {
-    
+
   },
-  "browserslist": [
-    "IE >= 8",
-    "Edge >= 12",
-    "chrome >= 33",
-    "firefox >= 33",
-    "safari >= 6",
-    "ios >= 6",
-    "android >= 4.1",
-    "and_chr >= 64",
-    "and_ff >= 57",
-    "samsung >= 4",
-    "opera >= 40",
-    "operamobile >= 10"
-  ],
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
@@ -60,5 +45,23 @@
     "gulp-uglify": "^3.0.2",
     "require-dir": "^1.2.0",
     "webpack-stream": "^5.2.1"
+  },
+  "browserslist": [
+    "IE >= 8",
+    "Edge >= 12",
+    "chrome >= 33",
+    "firefox >= 33",
+    "safari >= 6",
+    "ios >= 6",
+    "android >= 4.1",
+    "and_chr >= 64",
+    "and_ff >= 57",
+    "samsung >= 4",
+    "opera >= 40",
+    "operamobile >= 10"
+  ],
+  "dir": {
+    "src": "./assets/src",
+    "dist": "./assets/dist"
   }
 }
