--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^4.12.0",
+    "postcss-custom-properties": "^9.0.1",
     "require-dir": "^1.2.0",
     "webpack-stream": "^5.2.1"
   },
