--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^6.0.0",
+    "gulp-inject": "^5.0.4",
     "gulp-load-plugins": "^1.6.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
